@@ -26,6 +26,7 @@ import errno
 import logging
 import shutil
 import tempfile
+import signal
 from cexceptions import *
 
 #placeholder for translation
@@ -925,12 +926,27 @@ def get_kickstart_templates(api):
 
     return files.keys()
 
+def handler(num,frame):
+   print sys.stderr, _("Ctrl-C not allowed during writes.  Please wait.")
+   return True
+
+def no_ctrl_c():
+   signal.signal(signal.SIGINT, handler)
+   return True
+
+def ctrl_c_ok():
+   signal.signal(signal.SIGINT, signal.default_int_handler)
+   return True   
+
 if __name__ == "__main__":
     # print redhat_release()
     # print tftpboot_location()
-    print get_host_ip("255.255.255.250")
-    for x in range(32,1,-1):
-       value = get_host_ip("255.255.255.0/%s" % x, shorten=False)
-       value2 = get_host_ip("255.255.255.0/%s" % x, shorten=True)
-       print "%s -> %s" % (value,value2)
+    #print get_host_ip("255.255.255.250")
+    #for x in range(32,1,-1):
+    #   value = get_host_ip("255.255.255.0/%s" % x, shorten=False)
+    #   value2 = get_host_ip("255.255.255.0/%s" % x, shorten=True)
+    #   print "%s -> %s" % (value,value2)
+    no_ctrl_c()
+    allow_ctrl_c()
+
 
