@@ -36,6 +36,7 @@ Cobbler CHANGELOG
 - system object IP's ok in CIDR notation (AAA.BBB.CCC.DDD/EE) for defining PXE behavior.
 - split partition select template into two parts (old one still ships)
 - cleanup some stock kickstarts so we always use $kickstart_start
+- hook ctrl+c during serializer writes to prevent possible corruption of data in /var/lib/cobbler
 
 - Wed Jun 03 2008 - 1.0.3
 - Fix typo in replicate code
